//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  user_id String [pk]
  role Role [not null, default: 'USER']
  name String [not null]
  email String [unique, not null]
  phone_number String [unique, not null]
  password_hash String [not null]
  avatar_url String
  birthdate DateTime
  gender Gender
  status Status [not null, default: 'ACTIVE']
  is_verified Boolean [not null, default: false]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  brands Brand [not null]
  invitations Invitation [not null]
  Credit Credit [not null]
  UserVoucher UserVoucher [not null]
  campaign_wishlists CampaignWishlist [not null]
  notifications Notification [not null]
}

Table Brand {
  brand_id String [pk]
  user_id String [not null]
  name String [not null]
  industry String [not null]
  address String [not null]
  latitude Float
  longitude Float
  status Status [not null, default: 'ACTIVE']
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  user User [not null]
  campaigns Campaign [not null]
}

Table Game {
  game_id String [pk]
  brand_id String [not null]
  campaign_id String [not null]
  name String [not null]
  type String [not null]
  instructions String [not null]
  image_url String
  metadata Json [not null]
  item_exchange_enabled Boolean [not null, default: false]
  status Status [not null, default: 'ACTIVE']
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table Campaign {
  campaign_id String [pk]
  brand_id String [not null]
  name String [not null]
  image_url String
  start_date DateTime [not null]
  end_date DateTime [not null]
  description String [not null]
  category_id String [not null]
  games String[] [not null]
  status Status [not null, default: 'ACTIVE']
  payment Int [not null, default: 0]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  brand Brand [not null]
  vouchers Voucher [not null]
  Category Category
  wishlists CampaignWishlist [not null]
  notifications Notification [not null]
}

Table Category {
  category_id String [pk]
  name String [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  campaigns Campaign [not null]
}

Table Voucher {
  voucher_id String [pk]
  campaign_id String [not null]
  value Float [not null]
  quantity Int [not null]
  description String
  expiration_date DateTime [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  campaign Campaign [not null]
  UserVoucher UserVoucher [not null]
}

Table UserVoucher {
  user_voucher_id String [pk]
  user_id String [not null]
  voucher_id String [not null]
  quantity Int [not null, default: 1]
  code String [unique, not null]
  qr_code String [unique]
  assigned_at DateTime [default: `now()`, not null]
  used_at DateTime
  status VoucherStatus [not null, default: 'UNUSED']
  user User [not null]
  voucher Voucher [not null]

  indexes {
    (user_id, voucher_id, assigned_at) [unique]
  }
}

Table Notification {
  notification_id String [pk]
  user_id String [not null]
  campaign_id String [not null]
  message String [not null]
  type NotificationType [not null]
  status NotificationStatus [not null, default: 'UNREAD']
  created_at DateTime [default: `now()`, not null]
  user User [not null]
  campaign Campaign [not null]
}

Table Credit {
  credit_id String [pk]
  player_id String [unique, not null]
  credits Int [not null, default: 0]
  credits_used Int [not null, default: 0]
  shake_turn Int [not null, default: 0]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  user User [not null]
}

Table Invitation {
  invitation_id String [pk]
  email String [not null]
  user_id String [not null]
  status InvitationStatus [not null, default: 'PENDING']
  expiresAt DateTime [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  user User [not null]
}

Table CampaignWishlist {
  wishlist_id String [pk]
  user_id String [not null]
  campaign_id String [not null]
  created_at DateTime [default: `now()`, not null]
  user User [not null]
  campaign Campaign [not null]

  indexes {
    (user_id, campaign_id) [unique]
  }
}

Enum Role {
  ADMIN
  BRAND
  USER
}

Enum Gender {
  MALE
  FEMALE
  OTHER
}

Enum Status {
  ACTIVE
  INACTIVE
}

Enum VoucherStatus {
  UNUSED
  USED
  EXPIRED
}

Enum MessageType {
  EVENT
  REWARD
  ERROR
}

Enum NotificationStatus {
  READ
  UNREAD
}

Enum InvitationStatus {
  ACCEPTED
  REJECTED
  PENDING
}

Enum NotificationType {
  CAMPAIGN_START_24H
  CAMPAIGN_START_30MIN
}

Ref: Brand.user_id > User.user_id

Ref: Campaign.brand_id > Brand.brand_id

Ref: Campaign.category_id > Category.category_id

Ref: Voucher.campaign_id > Campaign.campaign_id

Ref: UserVoucher.user_id > User.user_id

Ref: UserVoucher.voucher_id > Voucher.voucher_id

Ref: Notification.user_id > User.user_id

Ref: Notification.campaign_id > Campaign.campaign_id

Ref: Credit.player_id > User.user_id

Ref: Invitation.user_id > User.user_id

Ref: CampaignWishlist.user_id > User.user_id

Ref: CampaignWishlist.campaign_id > Campaign.campaign_id